# LongRAG-Sum

./: .env.example  .gitignore  README.md  baseline_direct.py  build_longsum.py  evaluate.py  generate_test_summaries.py  pyproject.toml  requirements.txt  setup.py  train_rag_lora.py
config/: config.yaml
scripts/: baseline_direct.py  evaluate_longsum.py  generate_test_summaries.py  longsum_processor.py  train_qwen.py  train_rag_lora.py
src/longragsum/components/: benchmark_builder.py  chunking.py  data_ingestion.py  data_processor.py  rag_pipeline.py  reader.py  retriever.py
src/longragsum/components/reader/: rag_reader.py
src/longragsum/components/retriever/: dense_retriever.py
src/longragsum/config/: configuration.py
src/longragsum/entity/: config_entity.py
src/longragsum/logging/: logger.py
src/longragsum/utils/: common.py
tests/: test.py  test_ingestion.py  test_rag_full.py  test_retriever.py
