[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "longragsum"
version = "0.1.0"
description = "Retrieval-Augmented Long-Form Summarization with Open LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = [
    "summarization",
    "retrieval",
    "long-form",
    "rag",
    "nlp",
    "llm",
    "transformers",
    "deep-learning"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "sentence-transformers>=2.5.0",
    "accelerate>=0.30.0",
    "peft>=0.11.0",
    "bitsandbytes>=0.43.0",
    "faiss-cpu>=1.8.0",
    "rank-bm25>=0.2.2",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "nltk>=3.8",
    "loguru>=0.7.0",
    "rich>=13.0.0",
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
    "scikit-learn>=1.3.0",
    "gradio>=4.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "python-box>=7.0.0",
    "ensure>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pre-commit>=3.5.0",
]
gpu = [
    "faiss-gpu>=1.8.0",
]
all = [
    "longragsum[dev,gpu]",
]

[project.urls]
Homepage = "https://github.com/yourusername/LongRAG-Sum"
Documentation = "https://github.com/yourusername/LongRAG-Sum#readme"
Repository = "https://github.com/yourusername/LongRAG-Sum"
Issues = "https://github.com/yourusername/LongRAG-Sum/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["longragsum*"]
exclude = ["tests*", "experiments*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
include = '\.pyi?

exclude = '''
/(
    \.git
  | \.venv
  | \.eggs
  | \.mypy_cache
  | \.tox
  | \.pytest_cache
  | build
  | dist
  | artifacts
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["longragsum"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=longragsum",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "venv",
    "build",
    "dist",
]

[tool.coverage.run]
source = ["src/longragsum"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]