[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]

[project]
name = "longragsum"
version = "0.0.1"
description = "Retrieval-Augmented Long-Form Summarization with Open LLMs"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Md. Ashaduzzaman Sarker", email = "ashaduzzaman2505@gmail.com"}
]
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "sentence-transformers>=2.5.0",
    "accelerate>=0.30.0",
    "peft>=0.11.0",
    "bitsandbytes>=0.43.0",
    "faiss-cpu>=1.8.0",
    "rank-bm25>=0.2.2",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "nltk>=3.8",
    "loguru>=0.7.0",
    "rich>=13.0.0",
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
    "scikit-learn>=1.3.0",
    "gradio>=4.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "python-box>=7.0.0",
    "ensure>=1.0.0",
    "unsloth"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pre-commit>=3.5.0",
]
gpu = [
    "faiss-gpu>=1.8.0",
]
all = [
    "longragsum[dev,gpu]",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]